NetBSD Problem Report #30389

From www@netbsd.org  Tue May 31 22:42:38 2005
Return-Path: <www@netbsd.org>
Received: by narn.netbsd.org (Postfix, from userid 31301)
	id 362E863B104; Tue, 31 May 2005 22:42:38 +0000 (UTC)
Message-Id: <20050531224238.362E863B104@narn.netbsd.org>
Date: Tue, 31 May 2005 22:42:38 +0000 (UTC)
From: hauguela@gmail.com
Reply-To: hauguela@gmail.com
To: gnats-bugs@netbsd.org
Subject: no moutable Creative Nomad MuVo USB key
X-Send-Pr-Version: www-1.0

>Number:         30389
>Category:       port-i386
>Synopsis:       no moutable Creative Nomad MuVo USB key
>Confidential:   no
>Severity:       non-critical
>Priority:       medium
>Responsible:    port-i386-maintainer
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Tue May 31 22:43:00 +0000 2005
>Closed-Date:    Mon Jan 31 03:22:43 +0000 2011
>Last-Modified:  Mon Jan 31 03:22:43 +0000 2011
>Originator:     Alexandre Hauguel
>Release:        2.0.2
>Organization:
(Home computing)
>Environment:
NetBSD gateway 2.0.2 NetBSD 2.0.2 (MYKERN) #2: Wed May 18 23:57:35 CEST 2005  root@gateway:/root/usr/src/sys/arch/i386/compile/MYKERN i386
>Description:
I tried to use a key under NetBSd which is from the Creative Nomad MuVo mp3 player. Its 64 MB.

The Key seems to be supported by the kernel because when you plug in, its recognized.

But then if you try to mount it with : mount -t msdos /dev/sd0a /mnt/nomad then it loops in errors like : "umass0: BBB reset failed, STALLED"
The key is perfectly recognized under windows. ( its vfat format I assume )

Someone already had a similar problem in the mailing list : http://mail-index.netbsd.org/tech-misc/2003/02/12/0000.html

Here is the end of "dmesg" after plug-in the key (try) to mount and plug-out :

umass0 at uhub0 port 2 configuration 1 interface 0
umass0: Creative Tech NOMAD MuVo, rev 1.10/0.01, addr 3
umass0: using SCSI over Bulk-Only
scsibus0 at umass0: 2 targets, 1 lun per target
sd0 at scsibus0 target 0 lun 0: <CREATIVE, NOMAD_MUVO, 0001> disk removable
sd0: fabricating a geometry
sd0: 63488 KB, 62 cyl, 64 head, 32 sec, 512 bytes/sect x 126977 sectors
umass0: BBB reset failed, STALLED
umass0: BBB bulk-in clear stall failed, STALLED
umass0: BBB bulk-out clear stall failed, STALLED
sd0(umass0:0:0:0): generic HBA error
umass0: BBB bulk-out stall clear failed, STALLED
umass0: BBB reset failed, STALLED
umass0: BBB bulk-in clear stall failed, STALLED
umass0: BBB bulk-out clear stall failed, STALLED
umass0: BBB bulk-out stall clear failed, STALLED
umass0: BBB reset failed, STALLED
umass0: BBB bulk-in clear stall failed, STALLED
umass0: BBB bulk-out clear stall failed, STALLED
umass0: BBB bulk-out stall clear failed, STALLED
umass0: BBB reset failed, STALLED
umass0: BBB bulk-in clear stall failed, STALLED
umass0: BBB bulk-out clear stall failed, STALLED
umass0: BBB bulk-out stall clear failed, STALLED
umass0: BBB reset failed, STALLED
umass0: BBB bulk-in clear stall failed, STALLED
umass0: BBB bulk-out clear stall failed, STALLED
umass0: BBB bulk-out stall clear failed, STALLED
umass0: BBB reset failed, STALLED
umass0: BBB bulk-in clear stall failed, STALLED
umass0: BBB bulk-out clear stall failed, STALLED
umass0: at uhub0 port 2 (addr 3) disconnected
sd0 detached
scsibus0 detached
umass0 detached

>How-To-Repeat:
1) plug the key
2) issue : mount -t msdos /dev/sd0a /mnt/nomad

sd0a could be sd0[N] and /mnt/nomad stand as an example
>Fix:

>Release-Note:

>Audit-Trail:
From: "Jonathan A. Kollasch" <jakllsch@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/30389 CVS commit: src/sys/dev/usb
Date: Tue, 8 Jun 2010 20:40:07 +0000

 Module Name:	src
 Committed By:	jakllsch
 Date:		Tue Jun  8 20:40:07 UTC 2010

 Modified Files:
 	src/sys/dev/usb: umass_quirks.c

 Log Message:
 Add quirks for Creative Nomad MuVo, it chokes when told to prevent
 media removal or synchronize cache.  Should fix PR#30389.


 To generate a diff of this commit:
 cvs rdiff -u -r1.80 -r1.81 src/sys/dev/usb/umass_quirks.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->feedback
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Thu, 10 Jun 2010 04:53:12 +0000
State-Changed-Why:
Does that change help?


State-Changed-From-To: feedback->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Mon, 31 Jan 2011 03:22:43 +0000
State-Changed-Why:
Feedback timeout.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.