Add quirks for Creative Nomad MuVo, it chokes when told to prevent media removal or synchronize cache.  Should fix PR#30389.